--- a/html/index.html
+++ b/html/index.html
@@ -639,11 +639,11 @@
                     	<dt>How to cite?</dt>
                     	<dd>
                     		This service is part of a publication. If you use this service
-                    		in your research, please cite the publication:
+                    		in your research, please cite the publication:<br />
                     		<blockquote>
-                    		<strong>Mutanen, M.</strong> <em>et al.</em>. 2016. Species-Level 
+                    		<strong>Mutanen, M.</strong> <em>et al.</em> 2016. Species-Level 
                     		Poly- and Paraphyly in DNA barcode Gene Trees: Strong Operational 
-                    		Bias in European Lepidoptera.<em>Systematic Biology</em>
+                    		Bias in European Lepidoptera. <em>Systematic Biology</em>
                     		</blockquote>
                     	</dd>
                     	<dt>How to format taxonomic names?</dt>
