--- a/html/index.html
+++ b/html/index.html
@@ -632,9 +632,10 @@
                     	</dd>
                     	<dt>Where is this hosted?</dt>
                     	<dd>
-                    		This service is hosted by <a href="http://www.naturalis.nl">
-                    			Naturalis Biodiversity Center
-                    		</a>.
+                    		The web service is hosted at <a href="http://www.naturalis.nl">
+                    		Naturalis Biodiversity Center
+                    		</a>, the source code in 
+                    		<a href="https://github.com/naturalis/monophylizer">a GitHub repository</a>.
                     	</dd>
                     	<dt>How to cite?</dt>
                     	<dd>
